tests/parser/fail/20_lambda_not_variable.zulerr
[true=24;dd]
---
LAMBDA_UNRESOLVED
